bbcarchdev-sandbox (2.0) UNRELEASED; urgency=low

  * Re-version as a native package.

 -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Tue, 01 Apr 2014 16:44:11 +0100

bbcarchdev-sandbox (1.0-4) unstable; urgency=low

  * Add pristine-tar to list of packages installed by default.
  * Be more verbose when checking for missing SSH keys.

 -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Tue, 11 Mar 2014 13:24:50 +0000

bbcarchdev-sandbox (1.0-3) unstable; urgency=low

  * Add /etc/bbcarchdev-sandbox-version

 -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Sun, 09 Mar 2014 18:35:29 +0000

bbcarchdev-sandbox (1.0-2) unstable; urgency=low

  * Add kernel-package as a dependency to ensure modules can be built.

 -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Sun, 09 Mar 2014 15:40:04 +0000

bbcarchdev-sandbox (1.0-1) unstable; urgency=low

  * Update package dependencies; add generate-ssh-keys init script.

 -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Sun, 09 Mar 2014 14:55:25 +0000

bbcarchdev-sandbox (1.0) unstable; urgency=low

  * Initial Release.

 -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Sun, 09 Mar 2014 12:02:03 +0000