@@ -1,2 +1,6 @@
 etc
 etc/init.d
+etc/profile.d
+usr/bin
+usr/sbin
+
