@@ -1,0 +1,15 @@
+#! /bin/sh
+
+NC=/bin/nc.openbsd
+
+if [ x"$2" = x"" ] ; then
+	echo "Usage: $0 HOST PORT" >&2
+	exit 1
+fi
+
+if [ x"$socks_proxy" = x"" ] ; then
+	exec $NC -w 60 $*
+else
+	exec $NC -w 60 -x "$socks_proxy" $*
+fi
+
