@@ -1,6 +1,7 @@
 bbcarchdev-sandbox (2.0) UNRELEASED; urgency=low
 
   * Re-version as a native package.
+  * Add /usr/bin/reithproxies and /usr/sbin/socks_connect.
 
  -- Mo McRoberts <mo.mcroberts@bbc.co.uk>  Tue, 01 Apr 2014 16:44:11 +0100
 
